--- a/27-ottobre-2021/index.html
+++ b/27-ottobre-2021/index.html
@@ -26,20 +26,20 @@
 
     <section class="section-flex">
         <div class="section-item" id="competenze">
-            <h2>Competenze</h2>
+            <h2>Competenze/Formazione</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Veritatis culpa rem ipsa dolorum beatae expedita vero eveniet, nihil, quam corrupti minima. 
-                Ipsam distinctio natus deserunt qui facilis amet sapiente tenetur.
+                Un percorso completo nelle arti visive che parte dall'Istituto d'Arte, in pittura e decorazione,
+                prosegue nell'ambiente Accademico siciliano in graphic design ed è in continua crescita 
+                spostandosi nell'ambito digitale con il master di Edgemony in sviluppo Front-End. Non si smette mai di imparare!
             </p>
         </div>
 
         <div class="section-item"  id="hobby">
             <h2>Hobby</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Veritatis culpa rem ipsa dolorum beatae expedita vero eveniet, nihil, quam corrupti minima. 
-                Ipsam distinctio natus deserunt qui facilis amet sapiente tenetur.
+                Amo tutto ciò che riguarda il contatto con la materia e con gli elementi. Mi piace dedicarmi
+                all'artigianato nella produzione di piccole ceramiche. Mi piace tenermi in forma, andare a correre
+                e -da poco- dedicarmi a sport acquatici come SUP e surf. 
             </p>
             <button class="lightSwitch">light me up!</button>
         </div>
@@ -47,9 +47,9 @@
         <div class="section-item" id="skills">
             <h2>Skills</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Veritatis culpa rem ipsa dolorum beatae expedita vero eveniet, nihil, quam corrupti minima. 
-                Ipsam distinctio natus deserunt qui facilis amet sapiente tenetur.
+                Abile con i più importanti software Adobe, mi occupo di graphic design (branding, visual identity),
+                motion graphic e animazione 2D, web design sia dal punto di vista grafico che dello sviluppo Front-End
+                Non ci credi? Contattami per maggiori info! 
             </p>
         </div>
 
