esercizio 03 novembre aggiornato

--- a/03-novembre-2021/esercizio-03-11-2021/index.html
+++ b/03-novembre-2021/esercizio-03-11-2021/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Widget lista</title>
 </head>
 <body>
-    <h1>Widget Checklist in JS</h1>
+    <header>
+        <h1>Widget Checklist in JS</h1>
+    </header>
+    
+    <section>
         <form>
-            <!-- <input type="checkbox" name="lorem" id="box">
-            <label for="lorem">Lorem ipsum</label> -->
+           <!-- <input type="checkbox" name="lorem" id="box">
+           <label for="lorem">Lorem ipsum</label> -->
         </form>
-        <button id="btnPop">pop</button>
-
+    </section>
+    <div class="divBtn"><button id="btnPop">pop</button></div>
 
 
     <script src="data.js"></script>
     <script src="index.js"></script>
-
 </body>
 </html>
