esercizio corretto e finito

--- a/03-novembre-2021/esercizio-03-11-2021/index.html
+++ b/03-novembre-2021/esercizio-03-11-2021/index.html
@@ -14,8 +14,10 @@
     
     <section>
         <form>
+            <div class="divForm">
            <!-- <input type="checkbox" name="lorem" id="box">
            <label for="lorem">Lorem ipsum</label> -->
+          </div>
         </form>
     </section>
     <div class="divBtn"><button id="btnPop">pop</button></div>
