--- a/04-novembre-2021/widget/index.html
+++ b/04-novembre-2021/widget/index.html
@@ -39,7 +39,7 @@
     </ul>
 
 
-    <div>      
+    <div class="form-flex">      
       <form class="form2">
         <label for="names">Aggiungi un contatto:</label>
         <input type="text" name="names" id="names" placeholder="es: Mario Rossi" autocomplete="off" required /><br>
