--- a/04-novembre-2021/widget/index.html
+++ b/04-novembre-2021/widget/index.html
@@ -42,13 +42,13 @@
     <div class="form-flex">      
       <form class="form2">
         <label for="names">Aggiungi un contatto:</label>
-        <input type="text" name="names" id="names" placeholder="es: Mario Rossi" autocomplete="off" required /><br>
+        <input type="text" name="names" id="names" placeholder="Mario Rossi" autocomplete="off" required />
 
         <label for="email">Aggiungi email:</label>
-        <input type="text" name="email" id="email" placeholder="es: Mario@email.com" autocomplete="off" required />
+        <input type="text" name="email" id="email" placeholder="Mario@email.com" autocomplete="off" required />
 
         <label for="tel">Aggiungi numero:</label>
-        <input type="text" name="phone" id="phone" placeholder="es: +39 888999111" autocomplete="off" required /> <br>
+        <input type="text" name="phone" id="phone" placeholder="+39 888999111" autocomplete="off" required /> <br>
 
         <button type="submit" class="addBtn">Aggiungi</button>
       </form>
