--- a/04-novembre-2021/widget/index.html
+++ b/04-novembre-2021/widget/index.html
@@ -11,20 +11,46 @@
 <body>
 
     <main>
-        <div class="background">
-            <div>
-                <header>
-                <h1>Widget contatti in JavaScript</h1>
-                </header>
+      <header>
+        <h1>Widget contatti in JavaScript</h1>
+      </header>
 
-                <form class="form1">
-                <label for="search">Cerca tra i contatti:</label>
-                <input type="text" name="search" id="search" 
-                    placeholder="es: Mario Rossi" autocomplete="off" required />
-                <button>Cerca</button>
-                </form>
+      <div class="div-flex"> 
+
+              <form class="form1">
+                <div>
+                  <label for="search">Cerca tra i contatti:</label>
+                  <input type="text" name="search" id="search" 
+                      placeholder="Mario Rossi" autocomplete="off" required />
+                      <!-- <button>Search</button> -->
+
+                  <button><img src="search_lineStyle_20pxBlue.png" alt="search"></button>
+              </form>
+          </div>
+      
+          <div class="flex-item">   
+
+            <form class="form2 form-flex">
+
+            <div class="form-group">
+              <label for="names">Aggiungi un nuovo contatto:</label>
+              <input type="text" name="names" id="names" placeholder="Mario Rossi" autocomplete="off" required />
             </div>
-        </div>
+
+            <div class="form-group">
+              <label for="email">email:</label>
+              <input type="email" name="email" id="email" placeholder="Mario@email.com" autocomplete="off" />
+            </div>
+
+            <div class="form-group">
+              <label for="phone">numero:</label>
+              <input type="tel" name="phone" id="phone" placeholder="+39 888999111" autocomplete="off" required /> 
+              <button type="submit" class="addBtn">+</button>
+            </div>
+
+            </form>
+          </div>
+      </div>
 
     <ul>
 
@@ -37,22 +63,6 @@
       -->
       
     </ul>
-
-
-    <div class="form-flex">      
-      <form class="form2">
-        <label for="names">Aggiungi un contatto:</label>
-        <input type="text" name="names" id="names" placeholder="Mario Rossi" autocomplete="off" required />
-
-        <label for="email">Aggiungi email:</label>
-        <input type="text" name="email" id="email" placeholder="Mario@email.com" autocomplete="off" required />
-
-        <label for="tel">Aggiungi numero:</label>
-        <input type="text" name="phone" id="phone" placeholder="+39 888999111" autocomplete="off" required /> <br>
-
-        <button type="submit" class="addBtn">Aggiungi</button>
-      </form>
-    </div>
 
 </main>
 
