--- a/08-novembre-2021/widget-con-modale/index.html
+++ b/08-novembre-2021/widget-con-modale/index.html
@@ -24,7 +24,7 @@
                       placeholder="Mario Rossi" autocomplete="off" required />
                       <!-- <button>Search</button> -->
 
-                  <button><img src="search_lineStyle_20pxBlue.png" alt="search"></button>
+                  <button><img src="img/search_lineStyle_20pxBlue.png" alt="search"></button>
               </form>
           </div>
       
@@ -66,6 +66,19 @@
 
 </main>
 
+
+  <div class="modal">
+    <img src="img/cookies2.png" height= 70px alt="icona_coockies">
+    <h3>Privacy e coockies</h3>
+    <p>I tuoi dati verranno utilizzati nel rispetto delle normative GDPR europee</p>
+    <div class="modal__buttons">
+      <button id="acceptBtn">Accetta</button>
+      <button id="denyBtn">Rifiuta</button>
+    </div>
+  </div>
+
+
+  <script src="modal.js"></script>
   <script src="data.js"></script>
   <script src="prova.js"></script>
   <script src="index.js"></script>
