esercizio minimal calculator

--- a/08-novembre-2021/widget-con-modale/index.html
+++ b/08-novembre-2021/widget-con-modale/index.html
@@ -66,7 +66,7 @@
 
 </main>
 
-
+<!-- MODAL COOKIES-->
   <div class="modal">
     <img src="img/cookies2.png" height= 70px alt="icona_coockies">
     <h3>Privacy e coockies</h3>
@@ -75,6 +75,17 @@
       <button id="acceptBtn">Accetta</button>
       <button id="denyBtn">Rifiuta</button>
     </div>
+  </div>
+
+<!-- MODAL MONKEYS-->
+  <div id="modal-panic" class="modal-panic">
+    <div class="modal-panic-content">
+    <h3>Sembra che tu non abbia accettato le condizioni di navigazione del sito web.</h3>
+    <p>Preparati ad affrontare le conseguenze. <br>Il nostro team di scimmie killer verrà a prenderti.</p>
+    </div>
+  </div>
+  <div id="monkey">
+
   </div>
 
 
