--- a/18-novembre-2021-pigeon/index.html
+++ b/18-novembre-2021-pigeon/index.html
@@ -15,15 +15,17 @@
 
 <body>
     <div class="container">
-        <div class="hero"></div>
+        <div class="hero">
+            <div class="cacca"></div>
+        </div>
     </div>
 
-    <!-- <div class="btns"> -->
+    <div class="btns">
         <button class="up">up</button>
         <button class="down">down</button>
         <button class="left">left</button>
         <button class="right">right</button>
-    <!-- </div> -->
+    </div>
 
 </body>
 
